--- a/config.py.dist
+++ b/config.py.dist
@@ -1,3 +1,3 @@
-DATABSE = 'dbname=smobs user=smobs password=smobs host=smobs.com port=1234'
+DATABASE = 'dbname=smobs user=smobs password=smobs host=smobs.com port=1234'
 DEBUG = False
 
